--- a/style.css
+++ b/style.css
@@ -1,3 +1,39 @@
 body {
     background: blue;
+    font-size: 18px;
+}
+
+input {
+    font-size: 18px;
+}
+
+.postcard {
+    background: yellow;
+    width: 600px;
+    height: 400px;
+    margin: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 15px;
+}
+
+.postcard h1 {
+    margin:0%;
+}
+
+.left-part {
+    float: left;
+    background: red;
+    width: 50%;
+}
+
+.right-part {
+    float: right;
+    width: 50%;
+}
+
+.right-part input {
+    display: block;
 }
